# src/main/java/dev/pollito/user_manager_backend/controller/UsersController.java
@@ -21,14 +21,14 @@ public class UsersController implements UsersApi {
   private final UsersService usersService;
 
   @Override
-  public ResponseEntity<Users> usersGet(
+  public ResponseEntity<Users> findAll(
       Integer pageNumber,
       Integer pageSize,
       @NotNull UserSortProperty sortProperty,
       @NotNull SortDirection sortDirection,
       String q) {
     return ResponseEntity.ok(
-        usersService.findAllByQueryContainingIgnoreCase(
+        usersService.findAll(
             PageRequest.of(
                 pageNumber,
                 pageSize,
@@ -38,29 +38,29 @@ public class UsersController implements UsersApi {
   }
 
   @Override
-  public ResponseEntity<Void> usersIdDelete(Long id) {
-    return UsersApi.super.usersIdDelete(id);
+  public ResponseEntity<Void> deleteById(Long id) {
+    return UsersApi.super.deleteById(id);
   }
 
   @Override
-  public ResponseEntity<User> usersIdGet(Long id) {
+  public ResponseEntity<User> findById(Long id) {
     return ResponseEntity.ok(usersService.findById(id));
   }
 
   @Override
-  public ResponseEntity<User> usersIdPatch(Long id, UserRequestBody userRequestBody) {
-    return UsersApi.super.usersIdPatch(id, userRequestBody);
+  public ResponseEntity<User> partialUpdateById(Long id, UserRequestBody userRequestBody) {
+    return UsersApi.super.partialUpdateById(id, userRequestBody);
   }
 
   @Override
-  public ResponseEntity<User> usersIdPut(
+  public ResponseEntity<User> updateById(
       Long id, UserRequestBodyMinimumRequired userRequestBodyMinimumRequired) {
-    return UsersApi.super.usersIdPut(id, userRequestBodyMinimumRequired);
+    return UsersApi.super.updateById(id, userRequestBodyMinimumRequired);
   }
 
   @Override
-  public ResponseEntity<User> usersPost(
+  public ResponseEntity<User> create(
       UserRequestBodyMinimumRequired userRequestBodyMinimumRequired) {
-    return UsersApi.super.usersPost(userRequestBodyMinimumRequired);
+    return UsersApi.super.create(userRequestBodyMinimumRequired);
   }
 }
